# mealpreppers

./: .env.example  .gitignore  AGENTS.md  BASE_TECHNICAL_SPEC.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  design-philosophy.md  drizzle.config.ts  justfile  nuxt.config.ts  package-lock.json  package.json  review.md  skills-lock.json  tailwind.config.ts  tmp-15gram.html  vitest.config.component.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
src-tauri/assets/: splash.html
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__initial_schema.sql  V2__install_settings.sql
src-tauri/permissions/: settings.toml
src-tauri/resources/: README.md
src-tauri/src/: diagnostics.rs  keychain.rs  lib.rs  main.rs  sidecar.rs  startup.rs
src-tauri/src/shadow_server/: db.rs  error.rs  middleware.rs  mod.rs  request_context.rs  routes.rs  wire.rs
src-tauri/src/shadow_server/planning/: handlers.rs  mod.rs  models.rs  repository.rs
src-tauri/src/shadow_server/platform/: mod.rs  redaction.rs  repo_error.rs
src-tauri/src/shadow_server/recipe_catalog/: defaults.rs  handlers.rs  image.rs  mod.rs  models.rs  repository.rs
src-tauri/src/shadow_server/recipe_ingestion/: fetch.rs  handlers.rs  mod.rs  models.rs  normalizers.rs  scraper.rs  sites.rs
src-tauri/src/shadow_server/settings/: handlers.rs  mod.rs  repository.rs
src-tauri/src/shadow_server/shopping_list/: consolidation.rs  exact_merge.rs  handlers.rs  internal.rs  mod.rs  models.rs  openrouter.rs  (+1 more)
src-tauri/tests/: shadow_server_integration.rs
(+578 files in other folders)
